# SilentJam

./: CMakeLists.txt  README.md  silent_jam  vcpkg.json
src/: trumpet_synth.cpp
